# WeiLinkBot

./: .env.example  .git_commit_msg  .gitignore  README.md  README_EN.md  build.bat  build.py  config.yaml  pack_pyinstaller.bat  pack_pyinstaller.py  pyproject.toml
weilinkbot/: __init__.py  config.py  crypto.py  database.py  i18n.py  models.py  schemas.py
weilinkbot/api/: agent.py  app.py  bot.py  characters.py  config.py  conversations.py  deps.py  events.py  memories.py  models.py  prompts.py  providers.py  settings.py  st_presets.py  stats.py  users.py  world_books.py
weilinkbot/cli/: main.py
weilinkbot/frontend/static/: app.js  i18n.js
weilinkbot/frontend/templates/: index.html
weilinkbot/locales/: en.json  zh-CN.json
weilinkbot/services/: agent_service.py  bot_service.py  character_service.py  conversation_service.py  event_log.py  llm_service.py  local_embedding_service.py  mcp_server_service.py  mcp_service.py  memory_service.py  skill_service.py  st_preset_service.py  world_book_service.py  ws_service.py
weilinkbot/services/tools/: __init__.py  base.py  math_tool.py  mcp_tool.py  registry.py  time_tool.py
