[project]
name = "weilinkbot"
version = "0.1.4"
description = "AI Chatbot Platform powered by WeChat iLink Bot SDK"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "wechatbot-sdk>=0.2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "openai>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "mem0ai>=0.1.0",
    "chromadb>=0.4.0",
    "modelscope>=1.20.0",
    "numpy>=1.24",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
packaging = [
    "nuitka>=2.0",
    "pyinstaller>=6.0",
]

[project.scripts]
weilinkbot = "weilinkbot.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
